wait false para ec2

--- a/DR/ec2_manage.yml
+++ b/DR/ec2_manage.yml
@@ -7,6 +7,7 @@
       amazon.aws.ec2_instance:
           state: "{{ state }}"
           region: us-east-1
+          wait: false
           instance_ids:
             "{{instances}}"
         
